apps/minio/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: minio-console
  namespace: minio
  annotations:
    external-dns.alpha.kubernetes.io/hostname: "minio.lan.tapslab.com"
spec:
  parentRefs:
  - name: default-gateway
    namespace: istio-system
    sectionName: https
  hostnames:
  - "minio.lan.tapslab.com"
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /
    backendRefs:
    - name: minio-console
      port: 80
