apps/minio/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: minio-console-ingress
  namespace: minio
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-dns01-staging
spec:
  tls:
  - hosts:
    - minio.lan.tapslab.com
    secretName: minio-console-tls
  rules:
  - host: minio.lan.tapslab.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: minio-console
            port:
              number: 80
